--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=f1a6db17d4b68866448da89fd67a0413&libraries=services"></script>
+    <title>map_app</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
